fixed css caching bug
SQUASHED: AUTO-COMMIT-src-client-lively.js,AUTO-COMMIT-src-components-tools-lively-container.js,AUTO-COMMIT-src-components-widgets-css-reloading-test-widget.css,AUTO-COMMIT-src-components-widgets-css-reloading-test-widget.html,

--- a/src/components/widgets/css-reloading-test-widget.css
+++ b/src/components/widgets/css-reloading-test-widget.css
@@ -1,8 +1,8 @@
 #foo {
-  border: 22px green solid;
+  border: 22px blue solid;
 }
 #bar {
-  border: 19px solid pink;
+  border: 19px solid blue;
 
   font-size: bold;
 }
